<resources>
    <string name="account_title">游戏角色：</string>
    <string name="muzhi_account">拇指账号：</string>
    <string name="amount_title">支付金额：</string>
    <string name="game_title">游戏区服 ：</string>
    <string name="mz_left">拇指币余额：</string>
    <string name="mz_cz">拇指币充值 >></string>
    <string name="mz_pay">支付方式：</string>
    <string name="mz_recharge">充值方式：</string>
    <string name="other_way">其  他  方  式</string>
    <string name="only_left">专属币余额：</string>
    <string name="mz_notice">拇指游戏中心</string>
    <string name="bind_pnum_error_str">请输入正确格式的手机号码</string>
    <string name="bind_commit_error_str">请先获取验证码</string>
    <string name="bind_promit_01">请输入绑定的手机号码</string>
    <string name="bind_promit_02">请输入绑定帐号的密码</string>
    <string name="bind_promit_03">6位验证码</string>
    <string name="bind_promit_04">请输入正确格式的验证码</string>
    <string name="bind_verc_commit_succ_str">验证码获取成功，将以短信形式发送到您的手机，请注意查收</string>
    <string name="bind_title_str">绑定帐号</string>
    <string name="bind_getcode_bt_str">获取验证码</string>
    <string name="bind_getcode_bt_str2">已发送(%s秒)</string>
    <string name="unbindsuc_dialog_notice_str">\t\t您已成功解绑手机号，请保管好您的账号密码，避免账号的财产损失</string>
    <string name="bind_dialog_notice_str">\t\t您的账号尚未绑定，为了保证您的账号财产安全，建议绑定手机号码</string>
    <string name="changepsd_psd_et_str1">请输入密码</string>
    <string name="changepsd_psd_et_str2">请再次输入密码</string>
    <string name="changepsd_psd_suc_str">密码修改成功,请重新登陆</string>
    <string name="changepsd_psd_fail_str">密码修改失败</string>
    <string name="changepsd_psd_input_str">两次输入密码不一致</string>
    <string name="findpsd_forservice_str">联系我们 >></string>
     <string name="contactus_str01">您可以通过一下方式联系我们：</string>
    <string name="contactus_str02">客服热线：</string>
    <string name="contactus_str03">客服Q群：</string>
    <string name="contactus_str04">官方网站：</string>
    <string name="mz_pnum_str">400-9611191</string>
    <string name="mz_cs_qq_str">414289676</string>
    <string name="mz_url_str">www.91muzhi.com</string>
    <string name="regist_commit_notice1">用户名或密码为空</string>
    <string name="regist_commit_notice2">密码至少为6位字符</string>
    <string name="login_name_hint_str">用户名/手机号/邮箱</string>
    <string name="login_get_back_account_str">找回密码</string>
    <string name="login_getback_str_02">其他方式</string>
    <string name="login_commit_notice1">用户名或密码为空</string>
    <string name="login_account_promit_str">请输入帐号</string>
    <string name="login_pwd_promit_str">请输入密码(仅支持数字+字母)</string>
    <string name="login_pw_promit_str">密码(6~20个字符)</string>
    <string name="login_no_account_str">没有帐号?</string>
    <string name="login_forget_account_str">忘记密码</string>
    <string name="login_find_psd_suc_str">您的密码将以短信发送到手机，请注意查收。</string>
    <string name="login_find_psd_fail_str">该号码尚未绑定任何账号，您可以点击“联系我们”继续找回</string>
</resources>