<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/sdk_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <include layout="@layout/mzyw_pp_title" />

        <include layout="@layout/mzyw_pp_logo" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/contactus_str01"
        android:textColor="@color/mz_text_thj" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_str02"
            android:textColor="@color/mz_text_thj" />

        <TextView
            android:id="@+id/contactus_pnum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mz_pnum_str"
            android:textColor="@color/mz_text_zbh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_str03"
            android:textColor="@color/mz_text_thj" />

        <TextView
            android:id="@+id/contactus_qq_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mz_cs_qq_str"
            android:textColor="@color/mz_text_zbh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_str04"
            android:textColor="@color/mz_text_thj" />

        <TextView
            android:id="@+id/contactus_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mz_url_str"
            android:textColor="@color/mz_text_zbh" />
    </LinearLayout>

</LinearLayout>